--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -52,14 +52,14 @@
     <style name="CustomUserMessage" parent="Widget.Freshchat.UserMessage">
         <item name="android:textAppearance">@style/MyCustomTextAppearance</item>
         <item name="android:textColor">@color/fcWhite</item>
-        <item name="android:textColorLink">@color/freshchat_text_color_link</item>
+        <item name="android:textColorLink">@color/fcLinkColor</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="CustomTeamMemberMessage" parent="Widget.Freshchat.TeamMemberMessage">
         <item name="android:textAppearance">@style/MyCustomTextAppearance</item>
         <item name="android:textColor">@color/fcWhite</item>
-        <item name="android:textColorLink">@color/freshchat_text_color_link</item>
+        <item name="android:textColorLink">@color/fcLinkColor</item>
         <item name="android:textSize">16sp</item>
     </style>
 
